implemented application logging, fixed some bugs, and tested it via Postman.

--- a/config/.env.example
+++ b/config/.env.example
@@ -1,17 +1,19 @@
-DATABASE_HOST=incidents-postgres
+ENV=development
+
+DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=password
 DATABASE_NAME=incidents
 
-REDIS_HOST=incidents-redis
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=password
 CACHE_TTL=30s
 
 RETRY_LIMIT=5
 RETRY_DELAY=5s
-WEBHOOK_URL=http://localhost:9090/webhook
+WEBHOOK_URL=https://tslz9i-2a05-541-100-ec--1.ru.tuna.am
 STATS_TIME_WINDOW_MINUTES=5
 
 HANDLE_TIMEOUT=5s
