--- a/config/.env.example
+++ b/config/.env.example
@@ -1,22 +1,31 @@
 ENV=development
 
-DATABASE_HOST=localhost
+# Postgres
+DATABASE_HOST=postgres
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD=password
 DATABASE_NAME=incidents
 
-REDIS_HOST=localhost
+# Redis
+REDIS_HOST=redis
 REDIS_PORT=6379
-REDIS_PASSWORD=password
+REDIS_PASSWORD=
 CACHE_TTL=30s
 
-RETRY_LIMIT=5
-RETRY_DELAY=5s
-WEBHOOK_URL=https://tslz9i-2a05-541-100-ec--1.ru.tuna.am
+# API/Service
+HTTP_PORT=8080
+HANDLE_TIMEOUT=10s
+
+# Stats
 STATS_TIME_WINDOW_MINUTES=5
 
-HANDLE_TIMEOUT=5s
-HTTP_PORT=8080
+# Webhook (берёте при запуске tuna/ngrok)
+WEBHOOK_URL=https://e5od5g-217-172-18-128.ru.tuna.am
 
+# Retry
+RETRY_LIMIT=5
+RETRY_DELAY=5s
 
+# Tuna
+TUNA_AUTH_TOKEN=your_token
