Swagger documentation added

--- a/config/.env.example
+++ b/config/.env.example
@@ -27,5 +27,5 @@ WEBHOOK_URL=https://e5od5g-217-172-18-128.ru.tuna.am
 RETRY_LIMIT=5
 RETRY_DELAY=5s
 
-# Tuna
+# Tuna/ngrok (токен сервиса,который вы используете)
 TUNA_AUTH_TOKEN=your_token
